# zap

./: .gitignore  .gitlab-ci.yml  AGENTS.md  BUILDING.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  meson.build  package-lock.json  package.json  tsconfig.json
build-aux/flatpak/: sh.alisson.Zap.json
data/: meson.build  sh.alisson.Zap.data.gresource.xml  sh.alisson.Zap.desktop.in  sh.alisson.Zap.gschema.xml  sh.alisson.Zap.metainfo.xml.in  window.ui
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: chat-view.blp  chat-view.ts  chat-welcome.blp  chat-welcome.ts  logger.ts  login.blp  login.ts  main.ts  meson.build  sh.alisson.Zap.src.gresource.xml  style.css  welcome.blp  welcome.ts  window.blp  window.ts
src/core/: logger.ts
src/core/window/: window.blp  window.ts
src/features/auth/login/: login.blp  login.ts
src/features/auth/welcome/: welcome.blp  welcome.ts
src/features/chat/chat-content/: chat-content.blp  chat-content.ts
src/features/chat/chat-list-item/: chat-list-item.blp  chat-list-item.ts
src/features/chat/chat-view/: chat-view.blp  chat-view.ts
src/features/chat/chat-welcome/: chat-welcome.ts
src/features/chat/components/message-bubble/: message-bubble.blp  message-bubble.ts
src/resources/: sh.alisson.Zap.src.gresource.xml
src/resources/styles/: global.css
src/shared/: index.ts
src/shared/models/: chat.model.ts
src/shared/services/: chat-service.ts  user-service.ts
src/shared/utils/: constants.ts  formatting.ts  validation.ts
src/types/: app.types.ts
